Reduce myHeader font size to prevent overflow in @media

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -190,7 +190,7 @@ h5 {
   }
   #logo-container {
     margin-left: 20px;
-    font-size: 1.8rem;
+    font-size: 1.7rem;
   }
   #brand-image {
     width: 50px; 
